<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"
        android:hint="@string/place_input_url"
        android:inputType="text"
        android:text="ssl://wa3zrcx.mqtt.iot.gz.baidubce.com:1884" />

    <EditText
        android:id="@+id/et_client_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/line"
        android:hint="@string/place_input_clientid"
        android:inputType="text"
        android:text="s001" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/line"
        android:hint="@string/place_input_username"
        android:inputType="text"
        android:text="wa3zrcx/s001" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/line"
        android:hint="@string/place_input_password"
        android:inputType="textPassword"
        android:text="Or46p3LUzhbRcAS9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_open_link"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:background="@drawable/btn_selector"
            android:text="@string/open_link"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_close_link"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_selector"
            android:text="@string/close_link"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/btn_subscrib"
                    android:background="@drawable/line"
                    android:hint="@string/place_input_topic"
                    android:text="stateup"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_subscrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_selector"
                    android:text="订阅"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/lv_topic_result_message"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/line" />

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/line">

                    <TextView
                        android:id="@+id/tv_topic_result_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="viewStart"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/line" />

            <Button
                android:id="@+id/btn_send_message"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_selector"
                android:text="发送"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>